--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lessons1</title>
+    <title>float</title>
     <link rel="stylesheet" href="./css/style.css">
+<div class="wrap">
+    <div class="blok-big">
+        <p class="number">1</p>
+    </div>
+    <div class="blok-big2">
+        <p class="number2">2</p>
+
+        <div class="clear"></div>
+</div>
+
+    <!-- <div class="blok-smoll"></div> -->
+
 
 
     
