--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
     </div>
     <div class="blok-big2">
         <p class="number2">2</p>
-
         <div class="clear"></div>
+    </div>
 </div>
+
+
+    <div class="wrap2">
+        <div class="blok-big3">
+            <p class="number">1</p>
+        </div>
+    
+           <div class="blok-smoll">
+            <p class="number5">5</p>
+        </div>
+            
+        </div>
+        <div class="clear"></div>    
+    </div>
 
     <!-- <div class="blok-smoll"></div> -->
 
