--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
 
                 </ul>
                 </nav>
+        <!-- <div class="clear"></div>     -->
+
             </div>
         </section>
 
         <div class="section-rekvizit">
              
             <a href="#" class="logo1"><img src="./images/logo.svg" alt="logo"></a>
+        <!-- <div class="namber"> -->
             <div class="tel1"><a href="#" class="tel">8(812 123-45-67)</a></div>
             <div class="main-btn"><p class="txt">Обратный звонок</p> </div>
-
+        <!-- </div> -->
         
         </div>
          </section1>
