--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     </div>
         
     </section2>
+    <section3>
+        <div class="container">
+            <p class="txt3">Специальные предложения</p>
+        </div>
+    </section>
 
 
 </body>
