--- a/index.html
+++ b/index.html
@@ -79,11 +79,47 @@
     </div>
         
     </section2>
-    <section3>
+    <section3 class="goods">
         <div class="container">
-            <p class="txt3">Специальные предложения</p>
-        </div>
-    </section>
+            <h2 class="section-header">Специальные предложения</h2>
+            <div class="item">
+                <div class="item-image">
+                    <img src="./images/still.png" alt="">
+                </div>
+                <div class="item-description">
+                    <p>Парикмахерское кресло <br> «Норм» гидравлическое</p>
+                </div>
+                <div class="item-price">
+                    <p class="price">9 900 ₽</p>
+                </div>
+                <div class="bye-btn">
+                    <button>Купить</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="./images/still.png" alt="">
+                </div>
+                <div class="item-description">
+                    <p>Парикмахерское кресло <br> «Норм» гидравлическое</p>
+                </div>
+                <div class="item-price">
+                    <p class="price">9 900 ₽</p>
+                </div>
+                <div class="bye-btn">
+                    <button>Купить</button>
+                </div>
+            </div>
+            <div class="item">
+                <div class="item-image">
+                    <img src="./images/still.png" alt="">
+                </div>
+                <div class="item-description">
+                    <p>Парикмахерское кресло <br> «Норм» гидравлическое</p>
+                </div>
+                <div class="item-price">
+                    <p class="price">9 900 ₽</p>
+            </section3>
 
 
 </body>
