--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
     </div>
         
     </section2>
+
     <section3 class="goods">
         <div class="container">
-            <h2 class="section-header">Специальные предложения</h2>
+            <h2 class="txt3">Специальные предложения</h2>
             <div class="item">
                 <div class="item-image">
                     <img src="./images/still.png" alt="">
                 </div>
-                <div class="item-description">
+                <div class="txt4">
                     <p>Парикмахерское кресло <br> «Норм» гидравлическое</p>
                 </div>
                 <div class="item-price">
