--- a/index.html
+++ b/index.html
@@ -143,6 +143,21 @@
         </div>
 
             </section3>
+<section class="email">
+    <div class="container">
+        <div class="bonus">
+            <div class="tekst">
+            <p class="txt5">Получайте бонусы и подарки</p>
+            <p class="txt6">Каждый месяц разыгрываем <br> 10 000 рублей для наших клиентов</p>
+            </div>
+            <!-- <div class="link"> -->
+            <a href="#" class="convert"><img src="./images/mail.svg" alt="email"></a>
+            <!-- </div> -->
+            <form action="input"></form>
+     </div>
+
+    
+</section>
 
 
 </body>
