--- a/index.html
+++ b/index.html
@@ -153,8 +153,13 @@
             <!-- <div class="link"> -->
             <a href="#" class="convert"><img src="./images/mail.svg" alt="email"></a>
             <!-- </div> -->
-            <form action="input"></form>
+            <div class="forma">
+            <form action="#" method="">
+                <input type="email" placeholder="Введите email" class="p">
+            </form>
+        </div>
      </div>
+
 
     
 </section>
