--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="container">
                 <div class="categor-1">
                     <p class="categor">Популярні <br> категорії</p>
-                    <hr>
+                    <hr class="line2">
                     <a href="#" class="cat" >Насадки</a>
                     <a href="#" class="cat" >Інструменти</a>
                     <a href="#" class="cat" >Гель-лаки</a>
@@ -274,7 +274,7 @@
 
                 <div class="categor-2">
                     <p class="categor">Популярні <br> категорії</p>
-                    <hr>
+                    <hr class="line2">
                     <a href="#" class="cat" >Насадки</a>
                     <a href="#" class="cat" >Інструменти</a>
                     <a href="#" class="cat" >Гель-лаки</a>
@@ -285,7 +285,7 @@
 
                 <div class="categor-3">
                     <p class="categor">Популярні <br> категорії</p>
-                    <hr>
+                    <hr class="line2">
                     <a href="#" class="cat" >Насадки</a>
                     <a href="#" class="cat" >Інструменти</a>
                     <a href="#" class="cat" >Гель-лаки</a>
@@ -296,7 +296,7 @@
 
                 <div class="categor-4">
                     <p class="categor">Популярні <br> категорії</p>
-                    <hr>
+                    <hr class="line2">
                     <a href="#" class="cat" >Насадки</a>
                     <a href="#" class="cat" >Інструменти</a>
                     <a href="#" class="cat" >Гель-лаки</a>
@@ -304,6 +304,20 @@
                     <a href="#" class="cat" >Нарощування</a>
                     <a href="#" class="cat" >Обладнання</a>
                 </div>
+                <section>
+                    <hr class="line3">
+
+                </section>
+                <section>
+                    <!-- <div class="cocial"> -->
+                        <a href="#"><img src="./images/youtube.svg" alt="youtube"></a>
+                        <a href="#"><img src="./images/VK.svg" alt="VK"></a>
+                        <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
+                        <a href="#"><img src="./images/insta.svg" alt="insta"></a>
+
+
+                    </div>
+                </section>
                 
                 
 
