--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lessons1</title>
+    <title>Flexbox</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
+
 
 
     
 </head>
 <body>
-    
+   <!-- HEADER  -->
+   <section class="heder-menu">
+    <div class="menu">
+    <img src="./img/logo.svg" alt="logo" class="img-logo">
+
+        <a href="#" class="link1">Product</a>
+        <a href="#" class="link1">Features</a>
+        <a href="#" class="link1">Pricing</a>
+        <a href="#" class="link1">Case studies</a>
+        <a href="#" class="link1">Resources</a>
+        <div class="btn">
+        <button class="btn1">
+            <a href="#" class="txt1">Log in</a>
+        </button>
+        <button class="btn2" >
+            <a href="#" class="txt2">Try it free</a>
+        </button>
+        </div>
+    </div>
+   </section>
+   <hr>
 </body>
 </html>
