--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
    <section class="heder-menu">
     <div class="menu">
     <img src="./img/logo.svg" alt="logo" class="img-logo">
-
-        <a href="#" class="link1">Product</a>
-        <a href="#" class="link1">Features</a>
-        <a href="#" class="link1">Pricing</a>
-        <a href="#" class="link1">Case studies</a>
-        <a href="#" class="link1">Resources</a>
+    <nav>
+        <a href="#" class="link-1">Product</a>
+        <a href="#" class="link-1">Features</a>
+        <a href="#" class="link-1">Pricing</a>
+        <a href="#" class="link-1">Case studies</a>
+        <a href="#" class="link-1">Resources</a>
+    </nav>
         <div class="btn">
-        <button class="btn1">
-            <a href="#" class="txt1">Log in</a>
-        </button>
-        <button class="btn2" >
-            <a href="#" class="txt2">Try it free</a>
-        </button>
+        <a href="#" class="link-btn-1">Log in</a>
+        <a href="#" class="link-btn-2">Try it free</a>
         </div>
+    
     </div>
    </section>
    <hr>
