--- a/index.html
+++ b/index.html
@@ -32,5 +32,22 @@
     </div>
    </section>
    <hr>
+   <ASIDE>
+    <section>
+    <div class="accelerate">
+        <h1>Accelerate <br> localization from <br> code to delivery</h1>
+        <p class="txt-1">A localization  and translation<br> management platform for agile teams.<br> Embrace automation, workflow <br> transparency, and fast project delivery.</p>
+    </div>
+    <div class="btn34">
+        <a href="#" class="link-btn-3">Try it free</a>
+        <a href="#" class="link-btn-4">Book a demo</a>
+        </div>
+        <p class="txt-2">Try all features for 14 days · No credit card required</p>
+
+
+   </section>
+
+   </ASIDE>
+   
 </body>
 </html>
