--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 </head>
 <body>
    <!-- HEADER  -->
-   <section class="heder-menu">
+   <section class="header-menu">
     <div class="menu">
+      <div class="block-menu">  
     <img src="./img/logo.svg" alt="logo" class="img-logo">
     <nav>
         <a href="#" class="link-1">Product</a>
@@ -24,6 +25,7 @@
         <a href="#" class="link-1">Case studies</a>
         <a href="#" class="link-1">Resources</a>
     </nav>
+    </div>
         <div class="btn">
         <a href="#" class="link-btn-1">Log in</a>
         <a href="#" class="link-btn-2">Try it free</a>
@@ -35,15 +37,18 @@
    <ASIDE>
     <section>
     <div class="accelerate">
+        <div class="txt-btn">
         <h1>Accelerate <br> localization from <br> code to delivery</h1>
         <p class="txt-1">A localization  and translation<br> management platform for agile teams.<br> Embrace automation, workflow <br> transparency, and fast project delivery.</p>
-    </div>
+    
     <div class="btn34">
         <a href="#" class="link-btn-3">Try it free</a>
         <a href="#" class="link-btn-4">Book a demo</a>
         </div>
         <p class="txt-2">Try all features for 14 days · No credit card required</p>
-
+        </div>
+        <img src="./img/face.svg" alt="face" class="face">
+    </div>
 
    </section>
 
