--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
     </div>
 
    </section>
+   <section class="bg">
+    <div class="preferred">
+
+    
+
+    <h2>
+        The preferred localization <br> tool of 1500+ companies 
+    </h2>
+</div>
+<div class="logs">
+    <img src="./img/logo2.svg" alt="logo" class="logs-1" >
+    <img src="./img/logo3.svg" alt="logo" class="logs-1" >
+    <img src="./img/logo4.svg" alt="logo" class="logs-1" >
+    <img src="./img/logo5.svg" alt="logo" class="logs-1" >
+    <img src="./img/logo6.svg" alt="logo" class="logs-1" >
+    <img src="./img/logo7.svg" alt="logo" class="logs-1" >
+</div>
+   </section>
 
    </ASIDE>
    
