--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
    <!-- HEADER  -->
    <section class="header-menu">
     <div class="menu">
-      <div class="block-menu">  
+      
+<div class="block-menu">
     <img src="./img/logo.svg" alt="logo" class="img-logo">
     <nav>
-        <a href="#" class="link-1">Product</a>
-        <a href="#" class="link-1">Features</a>
-        <a href="#" class="link-1">Pricing</a>
-        <a href="#" class="link-1">Case studies</a>
-        <a href="#" class="link-1">Resources</a>
+        <ul>
+        <li><a href="#" class="link-1">Product</a></li>
+        <li><a href="#" class="link-1">Features</a></li>
+        <li><a href="#" class="link-1">Pricing</a></li>
+        <li><a href="#" class="link-1">Case studies</a></li>
+        <li><a href="#" class="link-1">Resources</a></li>
+        </ul>
     </nav>
     </div>
+
         <div class="btn">
         <a href="#" class="link-btn-1">Log in</a>
         <a href="#" class="link-btn-2">Try it free</a>
@@ -35,7 +39,8 @@
    </section>
    <hr>
    <ASIDE>
-    <section>
+
+    <section class="aside">
     <div class="accelerate">
         <div class="txt-btn">
         <h1>Accelerate <br> localization from <br> code to delivery</h1>
@@ -51,6 +56,7 @@
     </div>
 
    </section>
+   
    <section class="bg">
     <div class="preferred">
 
