--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     </div>
    </section>
    <hr>
-   <ASIDE>
+   <!-- ASIDE -->
+   <aside>
 
     <section class="aside">
     <div class="accelerate">
@@ -58,9 +59,9 @@
    </section>
    
    <section class="bg">
+    <div class="bg-2">
     <div class="preferred">
-
-    
+        
 
     <h2>
         The preferred localization <br> tool of 1500+ companies 
@@ -76,7 +77,28 @@
 </div>
    </section>
 
-   </ASIDE>
+   <section class="control">
+    <div class="txt-3">
+        <h3>Control the <br> localization process</h2>
+        <p class="txt-4">Collaborate with your team in a single workspace. <br> Add and assign tasks, track progress, and enjoy a <br> seamless localization workflow where you know <br> who is doing what and when.</p>
+        <a href="#" class="txt-5">Start now</a>
+    </div>
+    <img src="./img/pictogramma.png" alt="pictogramma">
+
+
+   </section>
+
+   <section class="control">
+    <img src="./img/pictogramma2.png" alt="pictogramma">
+<div class="txt3">
+    <h4>Shorten time <br> to market </h3>
+    <p class="txt-4">Localize your product in parallel with the <br> development cycle. Use the Adobe XD, Figma, <br> and Sketch plugins to start working on <br> translations as soon as the product design is <br> ready. No more idle waiting. </p>
+    <a href="#" class="txt-5">Start now</a>
+
+</div>
+   </section>
+
+   </aside>
    
 </body>
 </html>
