--- a/index.html
+++ b/index.html
@@ -97,6 +97,32 @@
 
 </div>
    </section>
+   <section class="control">
+    <div class="txt-3">
+        <h3>Ensure quality</h2>
+        <p class="txt-4">Use built-in tools — e.g. translation memory, machine <br> 
+            translation, and QA checks — to enhance the quality <br> 
+            and cohesion of translations. Add product <br> 
+            screenshots for context and use the in-context editors <br>
+            for instant previews.
+        </p>
+        <a href="#" class="txt-5">Start now</a>
+    </div>
+    <img src="./img/picto3.png" alt="pictogramma">
+   </section>
+
+   <section class="control">
+    <img src="./img/picto4.png" alt="pictogramma">
+<div class="txt3">
+    <h4>Less work for <br> developers </h3>
+    <p class="txt-4">Eliminate the hassle of localization and let developers <br> 
+        back to their main tasks. Save hours with the <br> 
+        powerful API, CLI, mobile SDKs, and integrations with <br> 
+        GitHub, Bitbucket, JIRA, and more. <br> 
+     </p>
+    <a href="#" class="txt-5">Start now</a>
+
+</div>
 
    </aside>
    
