--- a/index.html
+++ b/index.html
@@ -118,12 +118,63 @@
     <p class="txt-4">Eliminate the hassle of localization and let developers <br> 
         back to their main tasks. Save hours with the <br> 
         powerful API, CLI, mobile SDKs, and integrations with <br> 
-        GitHub, Bitbucket, JIRA, and more. <br> 
+        GitHub, Bitbucket, JIRA, and more. 
      </p>
     <a href="#" class="txt-5">Start now</a>
 
 </div>
+</section>
 
+<section class="What"> 
+    <div class="what2">
+
+    <div class="block-what">
+    <h2>What can you localize with Lokalise? <br></h2>
+    </div>
+    <div class="pictos">
+    <div class="picto">
+        <img src="./img/web.svg" alt="web">
+        <h5>Web apps</h5>
+        <p>Any kind of web apps — backend, <br>
+             frontend, single page, blogs — you <br>
+              name it.</p>
+              <img src="./img/document.svg" alt="document" class="img2">
+              <h5>
+                Documents
+              </h5>
+              <p>Upload your DOCX and static HTML <br> files.</p>   
+    </div>
+    <div class="picto2">
+        <img src="./img/mobile.svg" alt="mobile">
+        <h5>Mobile apps</h5>
+        <p>Upload any mobile platform language <br>
+            files. Embed Lokalise iOS SDK or <br>
+            Lokalise Android SDK if you prefer.</p>
+              <img src="./img/mails.svg" alt="mails" class="img2">
+              <h5>
+                Marketing e-mails
+              </h5>
+              <p>Integrate with Salesforce Marketing <br> 
+                Cloud (coming soon) or translate static <br>
+                e-mails.</p>   
+            </div>
+            <div class="picto3">
+                <img src="./img/game.svg" alt="game">
+                <h5>
+                    Games
+                  </h5>
+                  <p>Our cloud software is trusted by many <br> 
+                    leading game developers around the <br>
+                    world.</p> 
+                
+                      <img src="./img/iot.svg" alt="iot" class="img2">
+                      <h5>IoT</h5>
+                <p>We support most popular localization <br>
+                    file formats.   
+                    </div>
+        </div>
+
+</section>
    </aside>
    
 </body>
