--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
         </div>
 
 </section>
+<section class="Lokalise">
+    <div class="block-text1">
+        <p class="Lokalise-txt">
+            “Lokalise has turned a task we were dreading into an absolute <br>
+            pleasure. Great platform, intuitive UX, powerful API. The <br>
+            automatic text recognition for screenshots has been a <br>
+            lifesaver, and over-the-air updates are the icing on the cake.”
+        </p>
+        <p class="Edward">Edward Cooper, Chief Mobile Officer</p>
+        <img src="./img/revolur.svg" alt="revolur">
+    </div>
+    <img src="./img/man.png" alt="man" class="man">
+</section>
    </aside>
    
 </body>
