--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
     </div>
     <img src="./img/man.png" alt="man" class="man">
 </section>
+<section class="most">
+    <img src="./img/tort.svg" alt="">
+    <p class="most-txt">The most-loved translation <br> management software</p>
+    
+
+
+</section>
    </aside>
    
 </body>
