--- a/index.html
+++ b/index.html
@@ -241,12 +241,25 @@
     </div>
     <img src="./img/man.png" alt="man" class="man">
 </section>
+
 <section class="most">
     <img src="./img/tort.svg" alt="">
     <p class="most-txt">The most-loved translation <br> management software</p>
-    
+    <div class="line"></div>
+    <div class="star">
+    <img src="./img/star1.svg" alt="">
+    <img src="./img/star2.svg" alt="" class="star2">
+</div>
+</section>
 
 
+<section class="Integrate">
+    <p class="Integrate-txt">Integrate Lokalise with <br> your work tools</p>
+    <p class="Automate">Automate processes, eliminate routine tasks, <br> and track progress with ease.</p>
+    <img src="./img/nature.png" alt="nature">
+    <div class="btn5">
+        <a href="#" class="link5">See all integrations</a>
+    </div>
 </section>
    </aside>
    
