--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="block-menu">
     <img src="./img/logo.svg" alt="logo" class="img-logo">
     <nav>
-        <ul>
+        <ul class="heder-link">
         <li><a href="#" class="link-1">Product</a></li>
         <li><a href="#" class="link-1">Features</a></li>
         <li><a href="#" class="link-1">Pricing</a></li>
@@ -261,7 +261,83 @@
         <a href="#" class="link5">See all integrations</a>
     </div>
 </section>
+
+<section class="Localization">
+    <div class="block-loc">
+
+    <h2 class="Integrate-txt">Localization made easy. <br> Why wait?</h2>
+    <p class="Try">Try for free or let us show you how it works.</p>
+    <div class="btn6">
+        <a href="#" class="link-btn6">Try it free</a>
+    </div>
+</div>
+</section>
    </aside>
+   <!-- FOOTER -->
+   <section class="footer">
+    <div class="case">
+        <p class="Case">Case Studies</p>
+        <img src="./img/velo.png" alt="velo">
+        <img src="./img/Frame l.svg" alt="logo" class="sp">
+        <p class="Riding">Riding towards global success <br>
+             with a 100% teammate <br> enthusiasm</p>
+             <p class="txt9">Read more</p>
+    </div>
+
+    <div class="product">
+        <p class="txt9">Product</p>
+        <ul class="footer-link">
+            <li class="link10"><a href="#"class="link12">For developer</a ></li>
+            <li class="link10"><a href="#"class="link12">For managers</a ></li>
+            <li class="link10"><a href="#"class="link12">For translators</a ></li>
+            <li class="link10"><a href="#"class="link12">For designers</a ></li>
+            <li class="link10"><a href="#"class="link12">Integrations</a ></li>
+            <li class="link10"><a href="#"class="link12">Security</a ></li>
+            <li class="link10"><a href="#"class="link12">Pricing</a ></li>
+            <li class="link10"><a href="#"class="link12">Automations</a ></li>
+        </ul>
+    </div>
+    <div class="support">
+        <p class="txt9">Support</p>
+        <ul class="footer-link">
+            <li class="link10"><a href="#"class="link12">Contact</a ></li>
+            <li class="link10"><a href="#"class="link12">Documentation</a ></li>
+            <li class="link10"><a href="#"class="link12">Status</a ></li>
+            <li class="link10"><a href="#"class="link12">Product Updates</a ></li>
+            <li class="link10"><a href="#"class="link12">CLI Tool</a ></li>
+            <li class="link10"><a href="#"class="link12">API Reference</a ></li>
+            <li class="link10"><a href="#"class="link12">iOS and Android SDK</a ></li>
+            <li class="link10"><a href="#"class="link12">Supported File Formats</a ></li>
+        </ul>
+
+    </div>
+
+    <div class="company">
+        <p class="txt9">Company</p>
+        <ul class="footer-link">
+            <li class="link10"><a href="#"class="link12">About</a ></li>
+            <li class="link10"><a href="#"class="link12">Blog</a ></li>
+            <li class="link10"><a href="#"class="link12">Careers | We`re Hiring</a></li>
+            <li class="link10"><a href="#"class="link12">Case Studies/</a></li>
+            <li class="link10"><a href="#"class="link12">Media Kit</a ></li>
+            
+        </ul>
+    </div>
+    <div class="legal">
+        <p class="txt9">Legal</p>
+        <ul class="footer-link">
+            <li class="link10"><a href="#"class="link12">Terms of Service</a ></li>
+            <li class="link10"><a href="#"class="link12">Privacy Policy</a ></li>
+            <li class="link10"><a href="#"class="link12">Cookie Policy</a ></li>
+            <li class="link10"><a href="#"class="link12">Privacy Shield</a ></li>
+            <li class="link10"><a href="#"class="link12">DPA</a ></li>
+            <li class="link10"><a href="#"class="link12">List of Sub-processors</a ></li>
+            <li class="link10"><a href="#"class="link12">Candidates Privacy Notice</a ></li>
+            
+        </ul>
+    </div>
+
+   </section>
    
 </body>
 </html>
