--- a/index.html
+++ b/index.html
@@ -276,12 +276,14 @@
    <!-- FOOTER -->
    <section class="footer">
     <div class="case">
-        <p class="Case">Case Studies</p>
+        <p class="Case1">Case Studies</p>
         <img src="./img/velo.png" alt="velo">
+        <div class="sp1">
         <img src="./img/Frame l.svg" alt="logo" class="sp">
+    </div>
         <p class="Riding">Riding towards global success <br>
              with a 100% teammate <br> enthusiasm</p>
-             <p class="txt9">Read more</p>
+             <p class="txt11">Read more</p>
     </div>
 
     <div class="product">
@@ -336,8 +338,20 @@
             
         </ul>
     </div>
-
+    
    </section>
-   
+   <div class="line2">
+    <hr>
+</div>
+<section class="end">
+    <div class="rekv">
+
+    <img src="./img/Frame10.svg" alt="">
+    <p class="Localizatio">Localization workflow for your web and mobile <br>
+         apps, games and digital content.</p>
+      </div>   
+    <p class="Localization1">©2001-2020 <br>All rights reserved.</p>
+
+</section>
 </body>
 </html>
