--- a/index.html
+++ b/index.html
@@ -77,19 +77,20 @@
 </div>
    </section>
 
-   <section class="control">
+   <section class="control1">
     <div class="txt-3">
         <h3>Control the <br> localization process</h2>
         <p class="txt-4">Collaborate with your team in a single workspace. <br> Add and assign tasks, track progress, and enjoy a <br> seamless localization workflow where you know <br> who is doing what and when.</p>
         <a href="#" class="txt-5">Start now</a>
     </div>
-    <img src="./img/pictogramma.png" alt="pictogramma">
-
+    <!-- <div class="pictogr1"> -->
+    <img src="./img/pictogramma.png" alt="pictogramma" class="pictogr1">
+<!-- </div> -->
 
    </section>
 
-   <section class="control">
-    <img src="./img/pictogramma2.png" alt="pictogramma">
+   <section class="control2">
+    <img src="./img/pictogramma2.png" alt="pictogramma" class="pictogr1">
 <div class="txt3">
     <h4>Shorten time <br> to market </h3>
     <p class="txt-4">Localize your product in parallel with the <br> development cycle. Use the Adobe XD, Figma, <br> and Sketch plugins to start working on <br> translations as soon as the product design is <br> ready. No more idle waiting. </p>
@@ -97,9 +98,9 @@
 
 </div>
    </section>
-   <section class="control">
+   <section class="control3">
     <div class="txt-3">
-        <h3>Ensure quality</h2>
+        <h3>Ensure quality</h3>
         <p class="txt-4">Use built-in tools — e.g. translation memory, machine <br> 
             translation, and QA checks — to enhance the quality <br> 
             and cohesion of translations. Add product <br> 
@@ -108,11 +109,11 @@
         </p>
         <a href="#" class="txt-5">Start now</a>
     </div>
-    <img src="./img/picto3.png" alt="pictogramma">
+    <img src="./img/picto3.png" alt="pictogramma" class="pictogr1">
    </section>
 
-   <section class="control">
-    <img src="./img/picto4.png" alt="pictogramma">
+   <section class="control4">
+    <img src="./img/picto4.png" alt="pictogramma" class="pictogr1">
 <div class="txt3">
     <h4>Less work for <br> developers </h3>
     <p class="txt-4">Eliminate the hassle of localization and let developers <br> 
