--- a/index.html
+++ b/index.html
@@ -4,13 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lessons1</title>
+    <title>SVG</title>
     <link rel="stylesheet" href="./css/style.css">
 
 
     
 </head>
 <body>
+    <svg class="svg">
+<rect width="100%" height="170" x="0" y="650" fill="#D7D83D"></rect>
+<rect width="100%" height="320" x="0" y="330" fill="#253A97"></rect>
+<rect width="100%" height="400" x="0" y="0" fill="#93D6E1"></rect>
+<circle r="70" cx="190" cy="140" fill="#ffff">
+</circle>
+<circle r="60" cx="150" cy="80" fill="#ffff">
+</circle>
+
+<circle r="60" cx="250" cy="80" fill="#ffff">
+</circle>
+<circle r="70" cx="300" cy="120" fill="#ffff">
+</circle>
+
+<circle r="70" cx="750" cy="140" fill="#ffff">
+</circle>
+<circle r="60" cx="700" cy="80" fill="#ffff">
+</circle>
+
+<circle r="60" cx="800" cy="80" fill="#ffff">
+</circle>
+<circle r="70" cx="650" cy="120" fill="#ffff">
+</circle>
+
+
+<circle r="70" cx="1250" cy="140" fill="#ffff">
+</circle>
+<circle r="60" cx="1200" cy="80" fill="#ffff">
+</circle>
+
+<circle r="60" cx="1300" cy="80" fill="#ffff">
+</circle>
+<circle r="70" cx="1150" cy="120" fill="#ffff">
+</circle>
+
+<polygon points="600,480 800,480 900,380 480,380" fill="#590D0B"/>
+<polygon points="700,380 710,380 710,230 700,230" fill="#A03533"/>
+<polygon points="710,320 780,320 710,230"  fill="#ffff"/>
+
+    </svg>
     
 </body>
 </html>
