--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 <polygon points="700,380 710,380 710,230 700,230" fill="#A03533"/>
 <polygon points="710,320 780,320 710,230"  fill="#ffff"/>
 
+<circle r="120" cx="1150" cy="600" fill="#ffff" stroke-width="30" stroke="red">
+</circle>
+<circle r="80" cx="1150" cy="600" fill="#ffff" stroke-width="20" stroke="red">
+</circle>
+<circle r="50" cx="1150" cy="600" fill="#ffff" stroke-width="20" stroke="red">
+</circle>
+<circle r="30" cx="1150" cy="600" fill="red" >
+</circle>
+<polygon points="1000,780 1020,780 1080,710 1060,700" fill="#A03533"/>
+
     </svg>
     
 </body>
