--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <circle r="70" cx="1150" cy="120" fill="#ffff">
 </circle>
 
-<polygon points="600,480 800,480 900,380 480,380" fill="#590D0B"/>
-<polygon points="700,380 710,380 710,230 700,230" fill="#A03533"/>
-<polygon points="710,320 780,320 710,230"  fill="#ffff"/>
+<polygon points="500,500 900,500 1000,380 380,380" fill="#590D0B"/>
+<polygon points="700,380 710,380 710,210 700,210" fill="#A03533"/>
+<polygon points="710,320 800,320 710,210"  fill="#ffff"/>
 
 <circle r="120" cx="1150" cy="600" fill="#ffff" stroke-width="30" stroke="red">
 </circle>
@@ -58,7 +58,9 @@
 </circle>
 <circle r="30" cx="1150" cy="600" fill="red" >
 </circle>
-<polygon points="1000,780 1020,780 1080,710 1060,700" fill="#A03533"/>
+<polygon points="980,780 1000,780 1060,700 1040,680" fill="#4F2C14"/>
+<polygon points="1140,780 1160,780 1160,734 1140,734" fill="#4F2C14"/>
+<polygon points="1300,780 1320,780 1260,678 1240,700" fill="#4F2C14"/>
 
     </svg>
     
