--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 
         </section>
         <section class="Lokalise">
+            <div class="loka">
             <div class="block-text1">
                 <p class="Lokalise-txt">
                     “Lokalise has turned a task we were dreading into an absolute <br>
@@ -250,6 +251,7 @@
             <div class="man">
                 <img src="./img/man.png" alt="man">
             </div>
+        </div>
         </section>
 
         <section class="most">
