--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="menu">
                     <nav>
                         <ul>
-                            <li class="menu-item-aktive"><a href="#" class="menu-link"></a>Home</li>
+                            <li class="menu-item-active"><a href="#" class="menu-link"></a>Home</li>
                             <li class="menu-item"><a href="#" class="menu-link"></a>Menu</li>
                             <li class="menu-item"><a href="#" class="menu-link"></a>About Us</li>
                             <li class="menu-item"><a href="#" class="menu-link"></a>Review</li>
@@ -40,9 +40,18 @@
                 </div>
                 </nav>
                 <div class="picto">
-                    <li class="picto1"><a href="#" class="menu-link"><img src="./image/search.png" alt=""></a></li>
+                    <li class="picto1"><a href="#" class="menu-link"><img src="./image/Search button.png" alt=""></a></li>
                     <li class="picto1"><a href="#" class="menu-link"><img src="./image/Cart.png" alt=""></a></li>
                 </div>
+                <div class="title">
+
+                <h1>
+                    Keep your dreams <br> aroused with a cup <br> of coffee.
+                </h1>
+                <p class="txt-heder">
+                    The coffee ideas shared by these generators are not <br> cool at all, as they are not  a human being.
+                </p>
+            </div>
             </header>
         </div>
 
