--- a/index.html
+++ b/index.html
@@ -81,11 +81,18 @@
         <p>A coffee shop will help you <br> to tell the audience what your business.</p>
     </div>
     <div class="img1">
-        <img src="./image/imge1.png" alt="png">
-        <div class="5">
-            <p class="price-1">$5.99</p>
+        <img src="./image/imge1.png" alt="png" class="png">
+        <div class="prace-1">
+            <p class="prace-txt">$5.99</p>
             <p class="sort">Brazilian coffe beans</p>
             <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
+            <div class="cart-btn">
+                <img src="./image/Cart1.png" alt="cart">
+                <div class="btn">
+                    <a href="#" class="btn-link1">Get Delivery</a>
+                </div>
+            </div>
+            
         </div>
     </div>
 </div>
