--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>coffee</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    <script defer src="./js/jquery-3.6.1.min.js"></script>
+    <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script defer src="./js/script.js"></script>
+
 
 
 
@@ -68,35 +73,42 @@
 
     </section>
     <!-- ASIDE -->
-<section class="price">
-<div class="container">
-    <div class="best">
-        <h2>That is Our Best Offer</h2>
-        <div class="carusel">
-            <a href="#" class="slade"><img src="./image/slide key.png" alt=""></a>
-            <a href="#" class="slade"><img src="./image/slide key2.png" alt=""></a>
-        </div>
-    </div>
-    <div class="txt">
-        <p>A coffee shop will help you <br> to tell the audience what your business.</p>
-    </div>
-    <div class="img1">
-        <img src="./image/imge1.png" alt="png" class="png">
-        <div class="prace-1">
-            <p class="prace-txt">$5.99</p>
-            <p class="sort">Brazilian coffe beans</p>
-            <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
-            <div class="cart-btn">
-                <img src="./image/Cart1.png" alt="cart">
-                <div class="btn">
-                    <a href="#" class="btn-link1">Get Delivery</a>
+    <section class="price">
+        <div class="container">
+            <div class="best">
+                <h2>That is Our Best Offer</h2>
+                <div class="carusel">
+                    <a href="#" class="slade"><img src="./image/slide key.png" alt=""></a>
+                    <a href="#" class="slade"><img src="./image/slide key2.png" alt=""></a>
                 </div>
             </div>
-            
+            <div class="txt">
+                <p>A coffee shop will help you <br> to tell the audience what your business.</p>
+            </div>
+            <div class="img1">
+                <img src="./image/imge1.png" alt="png" class="png">
+                <div class="prace-1">
+                    <p class="prace-txt">$5.99</p>
+                    <p class="sort">Brazilian coffe beans</p>
+                    <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
+                    <div class="cart-btn">
+                        <div class="number" data-step="1" data-min="1" data-max="100">
+                            <input class="number-text" type="text" name="count" value="3">
+                            <!-- <span class="number-unit">шт</span> -->
+                            <div class="number-controls">
+                                <a href="#" class="number-plus">+</a>
+                                <a href="#" class="number-minus">−</a>
+                            </div>
+                        </div>
+                        <div class="btn1">
+                            <a href="#" class="btn-link2">Get Delivery</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-</section>
+    </section>
 
 </body>
 
