--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    
+    
+
     <script defer src="./js/jquery-3.6.1.min.js"></script>
     <script defer type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script defer src="./js/script.js"></script>
@@ -85,26 +88,76 @@
             <div class="txt">
                 <p>A coffee shop will help you <br> to tell the audience what your business.</p>
             </div>
-            <div class="img1">
-                <img src="./image/imge1.png" alt="png" class="png">
-                <div class="prace-1">
-                    <p class="prace-txt">$5.99</p>
-                    <p class="sort">Brazilian coffe beans</p>
-                    <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
-                    <div class="cart-btn">
-                        <div class="number" data-step="1" data-min="1" data-max="100">
-                            <input class="number-text" type="text" name="count" value="3">
-                            <!-- <span class="number-unit">шт</span> -->
-                            <div class="number-controls">
-                                <a href="#" class="number-plus">+</a>
-                                <a href="#" class="number-minus">−</a>
+            <div class="content">
+                <div class="img1">
+                    <img src="./image/imge1.png" alt="png" class="png">
+                    <div class="prace-1">
+                        <p class="prace-txt">$5.99</p>
+                        <p class="sort">Brazilian coffe beans</p>
+                        <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
+                        <div class="cart-btn">
+                            <div class="number" data-step="1" data-min="1" data-max="100">
+                                <input class="number-text" type="text" name="count" value="1">
+                                <!-- <span class="number-unit">шт</span> -->
+                                <div class="number-controls">
+                                    <a href="#" class="number-plus">+</a>
+                                    <a href="#" class="number-minus">−</a>
+                                </div>
+                            </div>
+                            <div class="btn1">
+                                <a href="#" class="btn-link2">Get Delivery</a>
                             </div>
                         </div>
-                        <div class="btn1">
-                            <a href="#" class="btn-link2">Get Delivery</a>
+
+                    </div>
+                </div>
+
+
+                <div class="img1">
+                    <img src="./image/imge1.png" alt="png" class="png">
+                    <div class="prace-1">
+                        <p class="prace-txt">$5.99</p>
+                        <p class="sort">Brazilian coffe beans</p>
+                        <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
+                        <div class="cart-btn">
+                            <div class="number" data-step="1" data-min="1" data-max="100">
+                                <input class="number-text" type="text" name="count" value="1">
+                                <!-- <span class="number-unit">шт</span> -->
+                                <div class="number-controls">
+                                    <a href="#" class="number-plus">+</a>
+                                    <a href="#" class="number-minus">−</a>
+                                </div>
+                            </div>
+                            <div class="btn1">
+                                <a href="#" class="btn-link2">Get Delivery</a>
+                            </div>
                         </div>
+
                     </div>
 
+                </div>
+
+                <div class="img1">
+                    <img src="./image/imge1.png" alt="png" class="png">
+                    <div class="prace-1">
+                        <p class="prace-txt">$5.99</p>
+                        <p class="sort">Brazilian coffe beans</p>
+                        <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
+                        <div class="cart-btn">
+                            <div class="number" data-step="1" data-min="1" data-max="100">
+                                <input class="number-text" type="text" name="count" value="1">
+                                <!-- <span class="number-unit">шт</span> -->
+                                <div class="number-controls">
+                                    <a href="#" class="number-plus">+</a>
+                                    <a href="#" class="number-minus">−</a>
+                                </div>
+                            </div>
+                            <div class="btn1">
+                                <a href="#" class="btn-link2">Get Delivery</a>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
