--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
                         <div class="cart-btn">
                             <div class="number" data-step="1" data-min="1" data-max="100">
-                                <input class="number-text" type="text" name="count" value="1">
+                                <input class="number-text" type="text" name="count" value="3">
                                 <!-- <span class="number-unit">шт</span> -->
                                 <div class="number-controls">
                                     <a href="#" class="number-plus">+</a>
@@ -113,15 +113,15 @@
                 </div>
 
 
-                <div class="img1">
-                    <img src="./image/imge1.png" alt="png" class="png">
+                <div class="img2">
+                    <img src="./image/Image2.png" alt="png" class="png">
                     <div class="prace-1">
-                        <p class="prace-txt">$5.99</p>
-                        <p class="sort">Brazilian coffe beans</p>
+                        <p class="prace-txt">$4.99</p>
+                        <p class="sort">Vietnam coffe beans</p>
                         <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
                         <div class="cart-btn">
                             <div class="number" data-step="1" data-min="1" data-max="100">
-                                <input class="number-text" type="text" name="count" value="1">
+                                <input class="number-text" type="text" name="count" value="2">
                                 <!-- <span class="number-unit">шт</span> -->
                                 <div class="number-controls">
                                     <a href="#" class="number-plus">+</a>
@@ -137,11 +137,11 @@
 
                 </div>
 
-                <div class="img1">
-                    <img src="./image/imge1.png" alt="png" class="png">
+                <div class="img3">
+                    <img src="./image/image3.png" alt="png" class="png">
                     <div class="prace-1">
-                        <p class="prace-txt">$5.99</p>
-                        <p class="sort">Brazilian coffe beans</p>
+                        <p class="prace-txt">$3.99</p>
+                        <p class="sort">Indonesian coffe beans</p>
                         <p class="txt-1">Coffee that’s always you handle <br> your own the way you like. </p>
                         <div class="cart-btn">
                             <div class="number" data-step="1" data-min="1" data-max="100">
