--- a/index.html
+++ b/index.html
@@ -162,6 +162,22 @@
             </div>
         </div>
     </section>
+    <section class="gallery">
+        <div class="container">
+            <h2>Our Gallery</h2>
+            <div class="gallery-txt">
+                <p>The coffee shop name generator is a great tool for those that are <br> deliberating what to call their new coffee.</p>
+            </div>
+            <div class="imgs">
+            <div class="img4"><img src="./image/Image4.png" alt="coffe cup"></div>
+            <div class="img5"><img src="./image/Image5.png" alt="coffe cup"></div>
+            <div class="img6"><img src="./image/Image6.png" alt="coffe cup"></div>
+            <div class="img7"><img src="./image/Image7.png" alt="coffe cup"></div>
+            <div class="img8"><img src="./image/Image8.png" alt="coffe cup"></div>
+            <div class="img9"><img src="./image/Image9.png" alt="coffe cup"></div>
+        </div>
+    </div>
+    </section>
 
 </body>
 
